--- a/selector/page1.html
+++ b/selector/page1.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta 
     <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css">
@@ -13,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="/style.css">
     <!-- Start VWO Async SmartCode -->
-<script type='text/javascript'>
+<!--<script type='text/javascript'>
 window._vwo_code = window._vwo_code || (function(){
 var account_id=333214,
 settings_tolerance=2000,
