--- a/selector/framsrc.html
+++ b/selector/framsrc.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Security-Policy" content="style-src-elem self https://www.harshdangi.github.io/selector *.google.com;">
+    <meta http-equiv="Content-Security-Policy" content="frame-src self *.google.com;">
     <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css">
