accId typo fixed

--- a/test.html
+++ b/test.html
@@ -25,7 +25,7 @@
         return decodeURIComponent(results[2].replace(/\+/g, " "));
     }
 window._vwo_code = window._vwo_code || (function(){
-var account_id= getQueryParameterByName(accId) || 4000161,
+var account_id= getQueryParameterByName('accId') || 4000161,
 settings_tolerance=2000,
 library_tolerance=2500,
 use_existing_jquery=false,
