updated placeholder URI
updated placehold.it links to https://via.placeholder.com

--- a/test.html
+++ b/test.html
@@ -71,15 +71,15 @@ window.settings_timer=setTimeout(function () {_vwo_code.finish() },settings_tole
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div id="owl-captions" class="owl-carousel owl-theme">
-            <div class="item"><img src="https://placehold.it/800x450" srcset="https://placehold.it/1600x900 1x, https://placehold.it/3200x1800 2x" class="img-responsive" alt="test1" cust-attr="carousel1-image">
+            <div class="item"><img src="https://via.placeholder.com/800x450" srcset="https://via.placeholder.com/1600x900 1x, https://via.placeholder.com/3200x1800 2x" class="img-responsive" alt="test1" cust-attr="carousel1-image">
               <div id="test1" >
                 <h2 cust-attr="carousel1-heading">test caption1</h2></div>
             </div>
-            <div class="item"><img src="https://placehold.it/1600x900" srcset="https://placehold.it/1600x900 1x, https://placehold.it/3200x1800 2x" class="img-responsive" alt="test2" cust-attr="carousel2-image">
+            <div class="item"><img src="https://via.placeholder.com/1600x900" srcset="https://via.placeholder.com/1600x900 1x, https://via.placeholder.com/3200x1800 2x" class="img-responsive" alt="test2" cust-attr="carousel2-image">
               <div id="test2">
                 <h2 cust-attr="carousel2-heading" >test caption2</h2></div>
             </div>
-            <div class="item"><img src="https://placehold.it/1600x900" srcset="https://placehold.it/1600x900 1x, https://placehold.it/3200x1800 2x" class="img-responsive" alt="test3" cust-attr="carousel3-image">
+            <div class="item"><img src="https://via.placeholder.com/1600x900" srcset="https://via.placeholder.com/1600x900 1x, https://via.placeholder.comt/3200x1800 2x" class="img-responsive" alt="test3" cust-attr="carousel3-image">
               <div id="test3">
                 <h2 cust-attr="carousel3-heading">test caption3</h2></div>
             </div>
@@ -90,7 +90,7 @@ window.settings_timer=setTimeout(function () {_vwo_code.finish() },settings_tole
       <div id="about" class="anchor" cust-attr="abt"></div>
       <div class="row">
         <div class="col-xs-10 col-sm-5  col-md-4  col-lg-4 col-xs-offset-1  col-sm-offset-1 col-md-offset-2 col-lg-offset-2">
-          <img src="https://placehold.it/1200x600" srcset="https://placehold.it/1200x600 1x, https://placehold.it/2400x1200 2x" alt="about pasta" class="img-responsive" cust-attr="pasta">
+          <img src="https://via.placeholder.com/1200x600" srcset="https://via.placeholder.com/1200x600 1x, https://via.placeholder.com/2400x1200 2x" alt="about pasta" class="img-responsive" cust-attr="pasta">
         </div>
         <div class="col-xs-10 col-sm-5  col-md-4  col-lg-4 col-xs-offset-1 col-sm-offset-0  col-md-offset-0 col-lg-offset-0">
           <p cust-attr="pasta-text" class="text-justify">Pasta ipsum dolor sit amet bucatini timpano croxetti bavette pici sacchettoni mezzelune sagne 'ncannulate tortelloni lanterne. Agnolotti chifferi paccheri lanterne mafaldine casarecce vermicelli acini di pepe maltagliati. Rotelle lanterne maltagliati
@@ -116,35 +116,35 @@ window.settings_timer=setTimeout(function () {_vwo_code.finish() },settings_tole
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div id="owl-team" class="owl-carousel owl-theme">
             <div class="item" cust-attr="item-container">
-              <div class="frame"><img cust-attr="frame-img" src="https://placehold.it/1000x1000" alt="team1"></div><br>
+              <div class="frame"><img cust-attr="frame-img" src="https://via.placeholder.com/1000x1000" alt="team1"></div><br>
               <div id="team1">
                 <h4>Captain America</h4>
                 <p>the boss</p>
               </div>
             </div>
             <div class="item" cust-attr="item-container">
-              <div class="frame"><img cust-attr="frame-img" src="https://placehold.it/1000x1000" alt="team2"></div><br>
+              <div class="frame"><img cust-attr="frame-img" src="https://via.placeholder.com/1000x1000" alt="team2"></div><br>
               <div id="team2">
                 <h4>Winter Soldier</h4>
                 <p>his deputy</p>
               </div>
             </div>
             <div class="item" cust-attr="item-container">
-              <div class="frame"><img cust-attr="frame-img" src="https://placehold.it/1000x1000" alt="team3"></div><br>
+              <div class="frame"><img cust-attr="frame-img" src="https://via.placeholder.com/1000x1000" alt="team3"></div><br>
               <div id="team3">
                 <h4>Spiderman</h4>
                 <p>the meme</p>
               </div>
             </div>
             <div class="item" cust-attr="item-container">
-              <div class="frame"><img cust-attr="frame-img" src="https://placehold.it/1000x1000" alt="team4"></div><br>
+              <div class="frame"><img cust-attr="frame-img" src="https://via.placeholder.com/1000x1000" alt="team4"></div><br>
               <div id="team4">
                 <h4>Thor</h4>
                 <p>grunt #1</p>
               </div>
             </div>
             <div class="item" cust-attr="item-container">
-              <div class="frame"><img cust-attr="frame-img" src="https://placehold.it/1000x1000" alt="team5"></div><br>
+              <div class="frame"><img cust-attr="frame-img" src="https://via.placeholder.com/1000x1000" alt="team5"></div><br>
               <div id="team5">
                 <h4>Hulk</h4>
                 <p>grunt #2</p>
