--- a/test.html
+++ b/test.html
@@ -79,7 +79,7 @@ window.settings_timer=setTimeout(function () {_vwo_code.finish() },settings_tole
               <div id="test2">
                 <h2 cust-attr="carousel2-heading" >test caption2</h2></div>
             </div>
-            <div class="item"><img src="https://via.placeholder.com/1600x900" srcset="https://via.placeholder.com/1600x900 1x, https://via.placeholder.comt/3200x1800 2x" class="img-responsive" alt="test3" cust-attr="carousel3-image">
+            <div class="item"><img src="https://via.placeholder.com/1600x900" srcset="https://via.placeholder.com/1600x900 1x, https://via.placeholder.com/3200x1800 2x" class="img-responsive" alt="test3" cust-attr="carousel3-image">
               <div id="test3">
                 <h2 cust-attr="carousel3-heading">test caption3</h2></div>
             </div>
