--- a/test.html
+++ b/test.html
@@ -205,7 +205,7 @@ window.settings_timer=setTimeout(function () {_vwo_code.finish() },settings_tole
 
     <div id="footer">
       <div class="container">
-        <p>By <a href="https://krzysztofradomski.github.io/">Krzysztof Radomski</a> for <a href="http://" onclick="function(e){e.preventDefault(); document.location.href = 'https://google.com/';}">XXXXXX</a>. All rights reserved.</p>
+        <p>By <a href="https://krzysztofradomski.github.io/">Krzysztof Radomski</a> for <a href="http://" onclick="function redir(e){e.preventDefault(); document.location.href = 'https://google.com/';}">XXXXXX</a>. All rights reserved.</p>
       </div>
     </div>
     </div>
