--- a/test.html
+++ b/test.html
@@ -178,7 +178,7 @@
               <br>
               <div class="col-xs-10 col-sm-10 col-md-8  col-lg-8 col-xs-offset-1  col-sm-offset-1 col-md-offset-2 col-lg-offset-2">
 
-                <form class="form-horizontal" role="form" id="contactForm" cust-attr="contact-form">
+                <form class="form-horizontal" role="form" id="contactForm" cust-attr="contact-form" action="/form_submit.php">
                   <div class="form-group">
                     <label for="name" class="col-sm-2 control-label" cust-attr="name--lbl">Name</label>
                     <div class="col-sm-10">
