--- a/osc.html
+++ b/osc.html
@@ -25,6 +25,8 @@
         return decodeURIComponent(results[2].replace(/\+/g, " "));
     }
 </script>
+    
+<script src="https://dev.visualwebsiteoptimizer.com/edrv/worker.js"></script>
 <script src="https://dev.visualwebsiteoptimizer.com/lib/4000161.js"></script>
 <!-- End VWO Async SmartCode -->
   </head>
