--- a/oscNonEvents.html
+++ b/oscNonEvents.html
@@ -26,7 +26,7 @@
     }
 </script>
     
-<script src="https://dev.visualwebsiteoptimizer.com/lib/536598.js" id='vwoCode'></script>
+<script src="https://dev.visualwebsiteoptimizer.com/lib/536598.js" id='vwoCode' nonce='FnlZKxkA7Wm+XBBDLX7LBg=='></script>
 <!-- End VWO Async SmartCode -->
   </head>
   
