--- a/oscNonEvents.html
+++ b/oscNonEvents.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="/selector/style.css">
     <!-- Start VWO Async SmartCode -->
-<script type='text/javascript'>
+<script type='text/javascript' nonce='FnlZKxkA7Wm+XBBDLX7LBg=='>
   function getQueryParameterByName(name, url) {
         if (!url) url = window.location.href;
         name = name.replace(/[\[\]]/g, "\\$&");
