--- a/oscNonEvents.html
+++ b/oscNonEvents.html
@@ -202,7 +202,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous" nonce='FnlZKxkA7Wm+XBBDLX7LBg=='></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/selector/client.js"></script>
