--- a/gtm.html
+++ b/gtm.html
@@ -224,7 +224,7 @@
       </div>
     </div>
     </div>
-    <script src="https://code.jquery.com/jquery-2.2.1.min.js"
+    <script nonce='nxqrz38qRKKugLlww8GwiQ==' src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
     <script nonce='nxqrz38qRKKugLlww8GwiQ==' type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
