--- a/nonce.html
+++ b/nonce.html
@@ -43,7 +43,7 @@
     </script>
     
     <!-- Start VWO Async SmartCode -->
-    <script type='text/javascript' id='vwoCode' nonce='nxqrz38qRKKugLlww8GwiQ=='>
+    <script type='text/javascript' nonce='nxqrz38qRKKugLlww8GwiQ=='>
 window._vwo_code = window._vwo_code || (function() {
     var account_id = 582541, // replace 1 with ${accountId} in release string
         version = 1.5,
