--- a/nonce.html
+++ b/nonce.html
@@ -315,7 +315,7 @@ window._vwo_code = window._vwo_code || (function() {
     <script nonce='nxqrz38qRKKugLlww8GwiQ==' type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script  nonce='nxqrz38qRKKugLlww8GwiQ==' src="/selector/client.js"></script>
 
-    <script>
+    <script nonce='nxqrz38qRKKugLlww8GwiQ=='>
       document.querySelector('#spa1').addEventListener('click', spaNavigation);
     </script>
   </body>
