--- a/nonce.html
+++ b/nonce.html
@@ -84,6 +84,17 @@ window._vwo_code = window._vwo_code || (function() {
                 };
                 d.getElementsByTagName('head')[0].appendChild(b);
             },
+          addInlineScript: function(content, crossorigin) {
+                var b = d.createElement('script');
+                b.fetchPriority = 'high';
+                b.src = a;
+                b.type = 'text/javascript';
+                b.innerHTML = content;
+                d.getElementsByTagName('head')[0].appendChild(b);
+            },
+            loadJSAsInline: function(crossorigin) {
+                fetch(url).then((response)=>{return response.text()}).then((response)=>{this.addInlineScript(response, crossorigin)})
+            },
             getVersion: function() {
                 return version;
             },
