--- a/nonce.html
+++ b/nonce.html
@@ -133,7 +133,7 @@ window._vwo_code = window._vwo_code || (function() {
                 else a.appendChild(d.createTextNode(b));
                 h.appendChild(a);
                 var c = this.getCombinationCookie();
-                this.load('https://dev.visualwebsiteoptimizer.com/j.php?a=' + account_id + '&u=' + encodeURIComponent(d.URL) + '&f=' + (+is_spa) + '&vn=' + version + (c ? ('&c=' + c) : ''));
+                this.load('jphp/jPhpNewSC.js?a=' + account_id + '&u=' + encodeURIComponent(d.URL) + '&f=' + (+is_spa) + '&vn=' + version + (c ? ('&c=' + c) : ''));
                 return settings_timer;
             }
         };
