--- a/nonce.html
+++ b/nonce.html
@@ -47,7 +47,7 @@
       const jphpUrl = getQueryParameterByName('jphp') ? 'jphp/jPhpNewSC.js?a=' : 'https://dev.visualwebsiteoptimizer.com/j.php?a=';
       console.log('using j.php from -> ', jphpUrl);
 window._vwo_code = window._vwo_code || (function() {
-    var account_id = 656095, // replace 1 with ${accountId} in release string
+    var account_id = getQueryParameterByName('accId') || 656095, // replace 1 with ${accountId} in release string
         version = 1.5,
         settings_tolerance = 2000,
         library_tolerance = 2500,
