--- a/nonce.html
+++ b/nonce.html
@@ -91,6 +91,7 @@ window._vwo_code = window._vwo_code || (function() {
                  const options = {};
                  if(config.co === 'anonymous') {
                   options.mode = 'cors';
+                  options.credentials = 'same-origin';
                  }
                 fetch(url, options).then(response=>response.text()).then((response)=>{
                     var b = d.createElement('script');
