--- a/constants/spa.html
+++ b/constants/spa.html
@@ -244,6 +244,7 @@
 
     <script>
       document.querySelector('#spa1').addEventListener('click', spaNavigation);
+      document.querySelector('#home').addEventListener('click', spaNavigation);
     </script>
   </body>
 </html>
