--- a/constants/spa.html
+++ b/constants/spa.html
@@ -91,7 +91,7 @@
     <div class="container">
 
       <div class="anchor" id="slider"></div>
-      <div class="row" id="spa2Row></div>
+      <div class="row" id="spa2Row"></div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div id="owl-captions" class="owl-carousel owl-theme">
