--- a/constants/spa.html
+++ b/constants/spa.html
@@ -45,17 +45,125 @@
     
     <!-- Start VWO Async SmartCode -->
     <script type='text/javascript'>
-      window._vwo_code = window._vwo_code || (function(){
-      var account_id= getQueryParameterByName('accId') || 4000161,
-      settings_tolerance=2000,
-      library_tolerance=2500,
-      use_existing_jquery=false,
-      is_spa=1,
-      hide_element='body',
-
-        /* DO NOT EDIT BELOW THIS LINE */
-        f=false,d=document,code={use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){
-        window.settings_timer=setTimeout(function () {_vwo_code.finish() },settings_tolerance);var a=d.createElement('style'),b=hide_element?hide_element+'{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}':'',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);this.load('https://dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&f='+(+is_spa)+'&r='+Math.random());return settings_timer; }};window._vwo_settings_timer = code.init(); return code; }());
+      window._vwo_code ||
+  (function () {
+    var account_id = getQueryParameterByName('accId') || 4000161,
+      version = 2.0,
+      settings_tolerance = 2000,
+      hide_element = 'body',
+      hide_element_style = 'opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important',
+      /* DO NOT EDIT BELOW THIS LINE */
+      f = false,
+      d = document,
+      v = d.querySelector('#vwoCode'),
+      cK = '_vwo_' + account_id + '_settings', // ck stands for Caching key.
+      /**
+       * cc stands for Code config
+       * It contains the following values : 
+       * sT -> settings_tolerance(Number), stT -> storage type(String), hE -> hide_element(string), hES -> hide_element_style(string)
+       */
+      cc = {};
+    try {
+      var c = JSON.parse( localStorage.getItem('_vwo_' + account_id + '_config'));
+      cc = c && typeof c === 'object' ? c : {};
+    } catch (e) {} 
+    var stT = cc.stT === 'session' ? window.sessionStorage : window.localStorage;
+    code = {
+        use_existing_jquery: function () {
+          return typeof use_existing_jquery !== 'undefined' ? use_existing_jquery : undefined;
+       },
+       library_tolerance: function () {
+          return typeof library_tolerance !== 'undefined' ? library_tolerance : undefined;
+      },
+      settings_tolerance: function () {
+        return cc.sT || settings_tolerance;
+      },
+      hide_element_style: function () {
+        return '{' + (cc.hES || hide_element_style) + '}';
+      },
+      hide_element: function () {
+        return typeof cc.hE === 'string' ? cc.hE : hide_element;
+      },
+      getVersion: function () {
+        return version;
+      },
+      finish: function () {
+        if (!f) {
+          f = true;
+          var a = d.getElementById('_vis_opt_path_hides');
+          if (a) a.parentNode.removeChild(a);
+        }
+      },
+      finished: function () {
+        return f;
+      },
+      load: function (a) {
+        var s = this.getSettings(),
+          b = d.createElement('script'),
+          t = this;
+        if (s) {
+          b.textContent = s;
+          d.getElementsByTagName('head')[0].appendChild(b);
+          // This check is necessary to ensure jPhp loads in case the cache is corrupted or has a syntax error.
+          if (!window.VWO || VWO.caE) { // caE -> stands for cache error (its value will be 1 if we enter cache block in jphp)
+            stT.removeItem(cK);
+            t.load(a);
+          }
+        } else {
+          b.fetchPriority = 'high';
+          b.src = a;
+          b.type = 'text/javascript';
+          b.onerror = function () {
+            _vwo_code.finish();
+          };
+          d.getElementsByTagName('head')[0].appendChild(b);
+        }
+      },
+      /**
+       * @returns cached settings if valid.
+       */
+      getSettings: function () {
+        try {
+          var i = stT.getItem(cK);
+          if (!i) {
+            return;
+          }
+          i = JSON.parse(i);
+          if (Date.now() > i.e) {
+            stT.removeItem(cK);
+            return;
+          }
+          return i.s;
+        } catch (e) {
+          return;
+        }
+      },
+      init: function () {
+        if (d.URL.indexOf('__vwo_disable__') > -1) return;
+        var sT = this.settings_tolerance();
+        window._vwo_settings_timer = setTimeout(function () {
+          _vwo_code.finish();
+          stT.removeItem(cK);
+        }, sT);
+        var cS = d.currentScript,
+          a = d.createElement('style'),
+          hE = this.hide_element(),
+          b = cS && !cS.async && hE ? hE + this.hide_element_style() : '',
+          h = d.getElementsByTagName('head')[0];
+        a.setAttribute('id', '_vis_opt_path_hides');
+        v && a.setAttribute('nonce', v.nonce);
+        a.setAttribute('type', 'text/css');
+        if (a.styleSheet) a.styleSheet.cssText = b;
+        else a.appendChild(d.createTextNode(b));
+        h.appendChild(a);
+        this.load(
+          'https://dev.visualwebsiteoptimizer.com/j.php?a=' + account_id + '&u=' + encodeURIComponent(d.URL) + '&vn=' + version
+        );
+      }
+    };
+    window._vwo_code = code;
+    code.init();
+  })();
     </script>
     <!-- End VWO Async SmartCode -->
   </head>
