--- a/constants/spa.html
+++ b/constants/spa.html
@@ -46,7 +46,7 @@
       const params = new URLSearchParams(document.location.search);
       for (const [key, value] of params) {
         if(key.startsWith('set_')){
-           window[key] = value;
+           window[key.slice(4)] = value;
         }
       }      
     </script>
